<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp">

    <Button
        android:id="@+id/sign_in_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="88dp"
        android:onClick="clickSignIn"
        android:text="Sign In"
        android:textStyle="bold"
        app:layout_constraintLeft_toLeftOf="parent"
        tools:layout_editor_absoluteY="325dp" />

    <Button
        android:id="@+id/sign_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginRight="72dp"
        android:text="Sign Up"
        android:textStyle="bold"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="229dp"
        android:onClick="clickSignUp"/>
</android.support.constraint.ConstraintLayout>
