...
    android:paddingBottom="0dp"
    tools:context="com.example.esc_50005.UI.Course.FAQ.CourseActivity">

    <android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/name_list_cv"
        style="@style/CardView.Light"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginEnd="-3dp"
        android:layout_marginStart="-3dp"
        android:layout_marginTop="8dp"
...
                <!--android:textAppearance="@style/TextAppearance.AppCompat.Body1"-->
                <!--android:textColor="#555555"-->
                <!--app:layout_constraintEnd_toStartOf="@id/faq_btn_upvote"-->
                <!--app:layout_constraintTop_toBottomOf="@+id/faq_tv_answer" />-->

            <Button
                android:id="@+id/name_list_progress_btn"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:drawableRight="@drawable/ic_keyboard_arrow_right_black_24dp"
                app:layout_constraintEnd_toEndOf="parent"
...
