<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="16dp"
    android:paddingLeft="16dp"
    android:paddingRight="16dp"
    android:paddingTop="16dp"
    tools:context="com.example.esc_50005.UI.SignUp.SignupActivity">

    <fragment
        android:id="@+id/signupFragment"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        class="com.example.esc_50005.UI.SignUp.SignupFragment"
        >
    </fragment>

</LinearLayout>
