<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="20dp"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:orientation="vertical">

        <!--<TextView-->
            <!--android:id="@+id/title"-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="30dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="Progress"/>-->

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="400dp"/>-->

        <com.github.mikephil.charting.charts.BarChart
            android:layout_width="match_parent"
            android:layout_height="400dp"
            android:id="@+id/chart1">

        </com.github.mikephil.charting.charts.BarChart>

        <!--<View-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="400dp"/>-->

        <!--<TextView-->
            <!--android:layout_width="wrap_content"-->
            <!--android:layout_height="30dp"-->
            <!--android:gravity="center"-->
            <!--android:layout_gravity="center"-->
            <!--android:text="End of Scroll View"/>-->
        
        
        
    </LinearLayout>

</ScrollView>