...

                        </LinearLayout>

                </android.support.design.widget.CollapsingToolbarLayout>

                <android.support.design.widget.TabLayout
                    android:id="@+id/tab_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/toolbar"
                    android:background="@color/colorTab"
                    android:minHeight="?attr/actionBarSize"
                    android:theme="@style/ThemeOverlay.AppCompat.Light" />
...
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            android:foregroundGravity="fill_horizontal"></FrameLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/session_fab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:elevation="8dp"
            android:layout_gravity="bottom|center"
            android:layout_margin="10dp"
            android:src="@drawable/ic_add_white_24dp"
...
